--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@
 		</div>
 	</div>
 	<hr>
-	<p class="copyright">Webpage Designed by Kingbee1 <i class="fa fa-github"></i></p>
+	<p class="copyright">Webpage Designed by Kingbee1 <a href="https://github.com/kingbee1"><i class="fa fa-github"></i></a></p>
 
 </div>
 </section>
